# untile-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/src/: editor-layer.cpp  editor-layer.h  untile-app.cpp
Engine/: CMakeLists.txt
Engine/src/: UntiledEngine.h  upch.h
Engine/src/Engine/Core/: application.cpp  application.h  assert.h  base.h  buffer.cpp  buffer.h  forward_declarations.h  fwd.h  graphics_context.h  input.cpp  input.h  key.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  mouse.h  resource_manager.h  window.cpp  window.h
Engine/src/Engine/Core/System/: clock.cpp  clock.h  time.cpp  time.h
Engine/src/Engine/Events/: application_event.h  event.h  key_event.h  mouse_event.h
Engine/src/Engine/Graphics/: atlas.cpp  atlas.h  camera.cpp  camera.h  compute_shader.cpp  compute_shader.h  framebuffer.cpp  framebuffer.h  graphics_api.cpp  graphics_api.h  graphics_context.cpp  graphics_context.h  image.cpp  image.h  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex.h  vertex_array.cpp  vertex_array.h  vertex_attrib.h  vertex_buffer.cpp  vertex_buffer.h
Engine/src/Engine/ImGui/: imgui_layer.cpp  imgui_layer.h
Engine/src/Engine/Platform/: glfw_window.cpp  glfw_window.h
Engine/src/Engine/Platform/OpenGL/: gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  opengl_api.cpp  opengl_api.h  opengl_context.cpp  opengl_context.h
Engine/src/Engine/Profiling/: profile.h
Engine/src/Engine/Render/: renderer.cpp  renderer.h  shader.cpp  shader.h  texture.h
Engine/src/Engine/Scene/: UECS.h  components.cpp  components.h  scene.cpp  scene.h
Engine/src/Engine/Utils/: memory.cpp  memory.h  object_traits.h  utilities.h
Engine/src/Platform/Common/: filesystem.cpp  filesystem.h  iosystem.cpp  iosystem.h
Engine/src/Platform/Common/System/: clock.cpp  clock.h  time.h
Engine/src/Platform/GLFW/: glfw_window.cpp  glfw_window.h
Engine/src/Platform/OpenGL/: gl_framebuffer.cpp  gl_framebuffer.h  gl_image.cpp  gl_image.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  opengl_api.cpp  opengl_api.h  opengl_context.cpp  opengl_context.h
Sandbox/: CMakeLists.txt
Sandbox/src/: cubes.cpp  cubes.h  main.cpp
Untile/: CMakeLists.txt
Untile/assets/shaders/: drops.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
Untile/src/: cubes.cpp  cubes.h  main.cpp
cmake/: make_groups.cmake  profiler_integration.cmake  project_configuration.cmake
